k8s/server/server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fomiller
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: fomiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: 695434033664.dkr.ecr.us-east-1.amazonaws.com/gin-test-server:latest
        ports: 
          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: fomiller
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
    - port: 8080
      targetPort: 8080
        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server
  namespace: fomiller
  labels:
    app: web-server
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/tags: 'managedWith=kubernetes'
    alb.ingress.kubernetes.io/group.name: 'fomiller'
    external-dns.alpha.kubernetes.io/hostname: 'fomiller-cluster.dev.aws.fomillercloud.com'
      
    # alb.ingress.kubernetes.io/rewrite-target: / # I dont think this works
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:695434033664:certificate/237b69ce-6f47-4fe0-942a-abb25f4dd99c
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
      
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /server
            backend:
              service:
                name: web-server
                port:
                  number: 8080
